src/objects/QB_Payment__c.object
<CustomObject>
    <description>The payments received against an invoice.</description>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>The number of the invoice this payment was applied to.</description>
        <inlineHelpText>The number of the invoice this payment was applied to.</inlineHelpText>
        <label>Invoice Number</label>
        <referenceTo>QB_Invoice__c</referenceTo>
        <relationshipLabel>QuickBooks Payments</relationshipLabel>
        <relationshipName>QuickBooks_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>The amount paid.</description>
        <inlineHelpText>The amount paid.</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Applied_Amount__c</fullName>
        <description>The amount of the payment applied to this invoice.</description>
        <inlineHelpText>The amount of the payment applied to this invoice.</inlineHelpText>
        <label>Payment Applied Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Applied_Date__c</fullName>
        <description>The date the payment applied amount was applied to the invoice.</description>
        <inlineHelpText>The date the payment applied amount was applied to the invoice.</inlineHelpText>
        <label>Payment Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>The date the payment was received.</description>
        <inlineHelpText>The date the payment was received.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>The method used for this payment as recorded in QuickBooks.</description>
        <inlineHelpText>The method used for this payment as recorded in QuickBooks.</inlineHelpText>
        <label>Payment Method</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Number__c</fullName>
        <description>The payment/reference number the user has assigned to the payment in QuickBooks.</description>
        <inlineHelpText>The payment/reference number the user has assigned to the payment in QuickBooks.</inlineHelpText>
        <label>Payment Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_Paymnet_TXN_ID__c</fullName>
        <description>The internal ID of the payment in QuickBooks.</description>
        <inlineHelpText>The internal ID of the payment in QuickBooks.</inlineHelpText>
        <label>QuickBooks Paymnet TXN ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <label>QuickBooks Payment</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Payment  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBooks Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>